--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>John Christian Estay</h1>
-            <h2>IT Professional & Technology Enthusiast</h2>
+            <h2>IT Student & Student athlete </h2>
             <p>Passionate about leveraging technology to solve complex problems and drive digital transformation</p>
             <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
