--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <header>
     <h1>John Christian Estay</h1>
-    <p>Aspiring IT Professional | Web Developer | Tech Enthusiast</p>
+    <p>Aspiring IT Student | Student Athlete </p>
   </header>
 
   <nav>
@@ -114,7 +114,7 @@
     <section id="about" class="section">
       <h2>Professional Narrative</h2>
       <p>
-        Hello! I'm <strong>John Christian Estay</strong>, an IT enthusiast driven by curiosity, creativity, 
+        Hello! I'm <strong>John Christian Estay</strong>, an IT student driven by curiosity, creativity, 
         and a passion for technology. My career goal is to contribute to innovative solutions 
         and leverage my technical and analytical skills to enhance user experiences and optimize system performance.
       </p>
