--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>John Christian Estay | IT Portfolio</title>
 
 <style>
+/* ===== PORTFOLIO STYLES ===== */
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #f5f7fa;
+  background-color: #f5f7fa;
   color: #333;
 }
 
@@ -26,9 +27,9 @@ nav {
 }
 
 nav a {
+  display: inline-block;
   color: white;
   padding: 15px 25px;
-  display: inline-block;
   text-decoration: none;
   font-weight: bold;
 }
@@ -59,47 +60,86 @@ h2 {
   list-style: none;
 }
 
-canvas {
-  display: block;
-  margin: 20px auto;
-  border: 3px solid #0056b3;
-  background: #f5f7fa;
-}
-
-/* GAME CONTROLS */
-.controls {
-  display: flex;
-  justify-content: center;
-  margin-top: 15px;
-}
-
-.dpad {
-  display: grid;
-  grid-template-columns: 60px 60px 60px;
-  grid-template-rows: 60px 60px 60px;
-  gap: 5px;
-}
-
-.dpad button {
-  font-size: 24px;
-  border: none;
-  background: #007bff;
-  color: white;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-.dpad button:active {
-  background: #0056b3;
-}
-
-.empty { visibility: hidden; }
-
 footer {
   background: #222;
   color: white;
   text-align: center;
   padding: 15px;
+}
+
+/* ===== SNAKE GAME (SCOPED) ===== */
+.snake-wrapper {
+  margin-top: 30px;
+  background: #2c3e50;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.snake-wrapper h3 {
+  color: #9bbc0f;
+}
+
+.snake-score {
+  background: #0f380f;
+  color: #9bbc0f;
+  padding: 8px;
+  margin: 10px auto;
+  width: 150px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.snake-canvas {
+  background: #9bbc0f;
+  border: 8px solid #0f380f;
+  border-radius: 5px;
+  outline: none;
+}
+
+.snake-controls {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 60px);
+  grid-template-rows: repeat(3, 60px);
+  gap: 8px;
+  justify-content: center;
+}
+
+.snake-btn {
+  background: #0f380f;
+  color: #9bbc0f;
+  border: 3px solid #9bbc0f;
+  border-radius: 10px;
+  font-size: 1.4em;
+  cursor: pointer;
+}
+
+.snake-center {
+  background: #306230;
+  cursor: default;
+}
+
+.snake-gameover {
+  position: absolute;
+  display: none;
+  background: rgba(15,56,15,0.9);
+  color: #9bbc0f;
+  padding: 25px;
+  border-radius: 10px;
+}
+
+.snake-gameover.show { display: block; }
+
+.snake-restart {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background: #9bbc0f;
+  color: #0f380f;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
 }
 </style>
 </head>
@@ -112,43 +152,73 @@ footer {
 </header>
 
 <nav>
+<a href="#about">About</a>
+<a href="#skills">Skills</a>
 <a href="#projects">Projects</a>
+<a href="#certifications">Certifications</a>
+<a href="#extracurriculars">Extracurriculars</a>
+<a href="#contact">Contact</a>
 </nav>
 
 <div class="container">
+
+<section id="about" class="section">
+<h2>Professional Narrative</h2>
+<p>Hello! I'm <strong>John Christian Estay</strong>, an IT student driven by curiosity and creativity.</p>
+</section>
+
+<section id="skills" class="section">
+<h2>Skills</h2>
+<ul class="projects-list">
+<li>HTML, CSS, JavaScript</li>
+<li>Python & Automation</li>
+<li>Database Management</li>
+</ul>
+</section>
 
 <section id="projects" class="section">
 <h2>Projects</h2>
 
 <ul class="projects-list">
-<li><strong>Snake Game:</strong> JavaScript + HTML5 Canvas with keypad support</li>
+<li><strong>Portfolio Website:</strong> Responsive personal site</li>
+<li><strong>Inventory System:</strong> Database-driven app</li>
+<li><strong>Weather App:</strong> API-based project</li>
+<li><strong>Snake Game:</strong> JavaScript + Canvas game</li>
 </ul>
 
-<h3 style="text-align:center">🎮 Snake Game</h3>
-<p style="text-align:center">Score: <span id="score">0</span></p>
+<!-- SNAKE GAME -->
+<div class="snake-wrapper">
+<h3>🐍 Play Snake</h3>
 
-<canvas id="gameCanvas" width="400" height="400"></canvas>
-
-<div class="controls">
-  <div class="dpad">
-    <div class="empty"></div>
-    <button onclick="setDirection('UP')">⬆</button>
-    <div class="empty"></div>
-
-    <button onclick="setDirection('LEFT')">⬅</button>
-    <div class="empty"></div>
-    <button onclick="setDirection('RIGHT')">➡</button>
-
-    <div class="empty"></div>
-    <button onclick="setDirection('DOWN')">⬇</button>
-    <div class="empty"></div>
-  </div>
+<div class="snake-score">
+Score: <span id="score">0</span>
 </div>
 
-<p style="text-align:center;margin-top:10px;">
-<button onclick="startGame()">Restart Game</button>
-</p>
+<div style="position:relative; display:inline-block;">
+<canvas id="gameCanvas" class="snake-canvas" width="500" height="500" tabindex="0"></canvas>
 
+<div id="gameOverScreen" class="snake-gameover">
+<h3>GAME OVER</h3>
+<p>Score: <span id="finalScore">0</span></p>
+<button class="snake-restart" onclick="restartGame()">PLAY AGAIN</button>
+</div>
+</div>
+
+<div class="snake-controls">
+<button class="snake-btn" id="btnUp">▲</button>
+<button class="snake-btn" id="btnLeft">◄</button>
+<div class="snake-btn snake-center">🐍</div>
+<button class="snake-btn" id="btnRight">►</button>
+<button class="snake-btn" id="btnDown">▼</button>
+</div>
+
+<p style="color:#9bbc0f;margin-top:10px;">Arrow Keys / WASD / Touch</p>
+</div>
+</section>
+
+<section id="contact" class="section">
+<h2>Contact</h2>
+<p>Email: johnchristianestay@email.com</p>
 </section>
 
 </div>
@@ -161,80 +231,84 @@ footer {
 const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 const scoreEl = document.getElementById("score");
+const finalScoreEl = document.getElementById("finalScore");
+const gameOverScreen = document.getElementById("gameOverScreen");
 
-const box = 20;
-let snake, food, direction, gameLoop, score;
+const TILE = 20, GRID = 25, SPEED = 120;
+let snake, food, direction, nextDirection, score, loop, running;
 
 function startGame() {
-  snake = [{ x: 200, y: 200 }];
-  direction = "RIGHT";
+  snake = [{x:5,y:5},{x:4,y:5},{x:3,y:5}];
+  direction = nextDirection = "RIGHT";
   score = 0;
+  running = true;
   scoreEl.textContent = score;
-
-  food = {
-    x: Math.floor(Math.random() * 20) * box,
-    y: Math.floor(Math.random() * 20) * box
-  };
-
-  clearInterval(gameLoop);
-  gameLoop = setInterval(draw, 120);
+  gameOverScreen.classList.remove("show");
+  spawnFood();
+  clearInterval(loop);
+  loop = setInterval(update, SPEED);
 }
 
-document.addEventListener("keydown", e => {
-  if (e.key === "ArrowUp") setDirection("UP");
-  if (e.key === "ArrowDown") setDirection("DOWN");
-  if (e.key === "ArrowLeft") setDirection("LEFT");
-  if (e.key === "ArrowRight") setDirection("RIGHT");
-});
-
-function setDirection(dir) {
-  if (dir === "LEFT" && direction !== "RIGHT") direction = "LEFT";
-  if (dir === "RIGHT" && direction !== "LEFT") direction = "RIGHT";
-  if (dir === "UP" && direction !== "DOWN") direction = "UP";
-  if (dir === "DOWN" && direction !== "UP") direction = "DOWN";
+function spawnFood() {
+  food = { x: Math.floor(Math.random()*GRID), y: Math.floor(Math.random()*GRID) };
 }
 
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+function update() {
+  direction = nextDirection;
+  const head = {...snake[0]};
+  if(direction==="UP") head.y--;
+  if(direction==="DOWN") head.y++;
+  if(direction==="LEFT") head.x--;
+  if(direction==="RIGHT") head.x++;
 
-  snake.forEach((part, i) => {
-    ctx.fillStyle = i === 0 ? "#007bff" : "#0056b3";
-    ctx.fillRect(part.x, part.y, box, box);
-  });
-
-  ctx.fillStyle = "red";
-  ctx.fillRect(food.x, food.y, box, box);
-
-  let head = { ...snake[0] };
-
-  if (direction === "LEFT") head.x -= box;
-  if (direction === "RIGHT") head.x += box;
-  if (direction === "UP") head.y -= box;
-  if (direction === "DOWN") head.y += box;
-
-  if (
-    head.x < 0 || head.y < 0 ||
-    head.x >= canvas.width || head.y >= canvas.height ||
-    snake.some(p => p.x === head.x && p.y === head.y)
-  ) {
-    clearInterval(gameLoop);
-    alert("Game Over! Score: " + score);
-    return;
+  if(head.x<0||head.y<0||head.x>=GRID||head.y>=GRID||
+     snake.some(s=>s.x===head.x&&s.y===head.y)) {
+    endGame(); return;
   }
 
   snake.unshift(head);
 
-  if (head.x === food.x && head.y === food.y) {
-    score++;
-    scoreEl.textContent = score;
-    food = {
-      x: Math.floor(Math.random() * 20) * box,
-      y: Math.floor(Math.random() * 20) * box
-    };
-  } else {
-    snake.pop();
-  }
+  if(head.x===food.x&&head.y===food.y){
+    score+=10;
+    scoreEl.textContent=score;
+    spawnFood();
+  } else snake.pop();
+
+  draw();
 }
+
+function draw() {
+  ctx.fillStyle="#9bbc0f";
+  ctx.fillRect(0,0,500,500);
+  ctx.fillStyle="#306230";
+  ctx.fillRect(food.x*TILE,food.y*TILE,TILE,TILE);
+  snake.forEach((s,i)=>{
+    ctx.fillStyle=i===0?"#0f380f":"#306230";
+    ctx.fillRect(s.x*TILE,s.y*TILE,TILE,TILE);
+  });
+}
+
+function endGame() {
+  running=false;
+  clearInterval(loop);
+  finalScoreEl.textContent=score;
+  gameOverScreen.classList.add("show");
+}
+
+function restartGame(){ startGame(); }
+
+document.addEventListener("keydown", e=>{
+  if(!running) return;
+  if((e.key==="ArrowUp"||e.key==="w")&&direction!=="DOWN") nextDirection="UP";
+  if((e.key==="ArrowDown"||e.key==="s")&&direction!=="UP") nextDirection="DOWN";
+  if((e.key==="ArrowLeft"||e.key==="a")&&direction!=="RIGHT") nextDirection="LEFT";
+  if((e.key==="ArrowRight"||e.key==="d")&&direction!=="LEFT") nextDirection="RIGHT";
+});
+
+btnUp.onclick=()=>direction!=="DOWN"&&(nextDirection="UP");
+btnDown.onclick=()=>direction!=="UP"&&(nextDirection="DOWN");
+btnLeft.onclick=()=>direction!=="RIGHT"&&(nextDirection="LEFT");
+btnRight.onclick=()=>direction!=="LEFT"&&(nextDirection="RIGHT");
 
 startGame();
 </script>
