--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>John Christian Estay | IT Portfolio</title>
 
 <style>
-/* ===== PORTFOLIO STYLES ===== */
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -19,6 +18,15 @@ header {
   color: white;
   padding: 60px 20px;
   text-align: center;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 2.5em;
+}
+
+header p {
+  font-size: 1.2em;
 }
 
 nav {
@@ -34,7 +42,9 @@ nav a {
   font-weight: bold;
 }
 
-nav a:hover { background: #007bff; }
+nav a:hover {
+  background: #007bff;
+}
 
 .container {
   max-width: 1000px;
@@ -45,29 +55,30 @@ nav a:hover { background: #007bff; }
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
+.section {
+  margin-bottom: 40px;
+}
+
 h2 {
   color: #0056b3;
   border-bottom: 2px solid #0056b3;
+  padding-bottom: 5px;
 }
 
-.section { margin-bottom: 40px; }
+ul {
+  list-style: none;
+  padding: 0;
+}
 
-.projects-list li {
+ul li {
   background: #e9f1ff;
   margin: 10px 0;
-  padding: 10px;
+  padding: 10px 15px;
   border-left: 5px solid #0056b3;
-  list-style: none;
+  border-radius: 5px;
 }
 
-footer {
-  background: #222;
-  color: white;
-  text-align: center;
-  padding: 15px;
-}
-
-/* ===== SNAKE GAME (SCOPED) ===== */
+/* ===== SNAKE GAME ===== */
 .snake-wrapper {
   margin-top: 30px;
   background: #2c3e50;
@@ -85,7 +96,7 @@ footer {
   color: #9bbc0f;
   padding: 8px;
   margin: 10px auto;
-  width: 150px;
+  width: 160px;
   border-radius: 5px;
   font-weight: bold;
 }
@@ -129,7 +140,9 @@ footer {
   border-radius: 10px;
 }
 
-.snake-gameover.show { display: block; }
+.snake-gameover.show {
+  display: block;
+}
 
 .snake-restart {
   margin-top: 15px;
@@ -141,65 +154,83 @@ footer {
   font-weight: bold;
   cursor: pointer;
 }
+
+footer {
+  background: #222;
+  color: white;
+  text-align: center;
+  padding: 15px;
+}
+
+@media (max-width: 600px) {
+  header h1 { font-size: 1.8em; }
+  header p { font-size: 1em; }
+  nav a { display: block; }
+}
 </style>
 </head>
 
 <body>
 
 <header>
-<h1>John Christian Estay</h1>
-<p>Aspiring IT Student | Student Athlete</p>
+  <h1>John Christian Estay</h1>
+  <p>Aspiring IT Student | Student Athlete</p>
 </header>
 
 <nav>
-<a href="#about">About</a>
-<a href="#skills">Skills</a>
-<a href="#projects">Projects</a>
-<a href="#certifications">Certifications</a>
-<a href="#extracurriculars">Extracurriculars</a>
-<a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#certifications">Certifications</a>
+  <a href="#extracurriculars">Extracurriculars</a>
+  <a href="#contact">Contact</a>
 </nav>
 
 <div class="container">
 
+<!-- ABOUT -->
 <section id="about" class="section">
 <h2>Professional Narrative</h2>
-<p>Hello! I'm <strong>John Christian Estay</strong>, an IT student driven by curiosity and creativity.</p>
+<p>
+Hello! I'm <strong>John Christian Estay</strong>, an aspiring IT student with a strong interest in
+software development, networking, and problem-solving. I aim to apply my technical knowledge
+to real-world systems and continuously grow as a technology professional.
+</p>
 </section>
 
+<!-- SKILLS -->
 <section id="skills" class="section">
 <h2>Skills</h2>
-<ul class="projects-list">
+<ul>
 <li>HTML, CSS, JavaScript</li>
-<li>Python & Automation</li>
-<li>Database Management</li>
+<li>Python (Basic Automation & Logic)</li>
+<li>Database Fundamentals (MySQL, MongoDB)</li>
+<li>Basic Networking & IT Support</li>
+<li>Git & GitHub Version Control</li>
 </ul>
 </section>
 
+<!-- PROJECTS -->
 <section id="projects" class="section">
 <h2>Projects</h2>
-
-<ul class="projects-list">
-<li><strong>Portfolio Website:</strong> Responsive personal site</li>
-<li><strong>Inventory System:</strong> Database-driven app</li>
-<li><strong>Weather App:</strong> API-based project</li>
-<li><strong>Snake Game:</strong> JavaScript + Canvas game</li>
+<ul>
+<li><strong>Personal Portfolio Website:</strong> Responsive website showcasing my profile and projects.</li>
+<li><strong>Inventory Management System:</strong> Simple database-driven stock tracking system.</li>
+<li><strong>Weather App:</strong> API-based real-time weather application.</li>
+<li><strong>Snake Game:</strong> JavaScript + HTML5 Canvas game with keyboard and mobile controls.</li>
 </ul>
 
-<!-- SNAKE GAME -->
 <div class="snake-wrapper">
-<h3>🐍 Play Snake</h3>
+<h3>🐍 Play Snake Game</h3>
 
-<div class="snake-score">
-Score: <span id="score">0</span>
-</div>
+<div class="snake-score">Score: <span id="score">0</span></div>
 
 <div style="position:relative; display:inline-block;">
-<canvas id="gameCanvas" class="snake-canvas" width="500" height="500" tabindex="0"></canvas>
+<canvas id="gameCanvas" class="snake-canvas" width="500" height="500"></canvas>
 
 <div id="gameOverScreen" class="snake-gameover">
 <h3>GAME OVER</h3>
-<p>Score: <span id="finalScore">0</span></p>
+<p>Final Score: <span id="finalScore">0</span></p>
 <button class="snake-restart" onclick="restartGame()">PLAY AGAIN</button>
 </div>
 </div>
@@ -212,19 +243,44 @@ Score: <span id="score">0</span>
 <button class="snake-btn" id="btnDown">▼</button>
 </div>
 
-<p style="color:#9bbc0f;margin-top:10px;">Arrow Keys / WASD / Touch</p>
+<p style="color:#9bbc0f;margin-top:10px;">Arrow Keys / WASD / Touch Controls</p>
 </div>
 </section>
 
+<!-- CERTIFICATIONS -->
+<section id="certifications" class="section">
+<h2>Certifications</h2>
+<ul>
+<li>Google IT Support Professional Certificate</li>
+<li>Introduction to Cybersecurity – Cisco Networking Academy</li>
+<li>Microsoft Office Specialist (MOS)</li>
+<li>Basic Python Programming Certificate</li>
+</ul>
+</section>
+
+<!-- EXTRACURRICULARS -->
+<section id="extracurriculars" class="section">
+<h2>Extracurricular Activities</h2>
+<p>
+• Active member of IT and programming clubs<br>
+• Participant in school hackathons and coding challenges<br>
+• Student Athlete, balancing academics and sports discipline<br>
+• Volunteer mentor for beginner coding workshops
+</p>
+</section>
+
+<!-- CONTACT -->
 <section id="contact" class="section">
 <h2>Contact</h2>
-<p>Email: johnchristianestay@email.com</p>
+<p><strong>Email:</strong> johnchristianestay@email.com</p>
+<p><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+<p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/johnchristianestay" target="_blank">linkedin.com/in/johnchristianestay</a></p>
 </section>
 
 </div>
 
 <footer>
-&copy; 2024 John Christian Estay
+&copy; 2024 John Christian Estay. All Rights Reserved.
 </footer>
 
 <script>
@@ -235,13 +291,12 @@ const finalScoreEl = document.getElementById("finalScore");
 const gameOverScreen = document.getElementById("gameOverScreen");
 
 const TILE = 20, GRID = 25, SPEED = 120;
-let snake, food, direction, nextDirection, score, loop, running;
+let snake, food, direction, nextDirection, score, loop;
 
 function startGame() {
   snake = [{x:5,y:5},{x:4,y:5},{x:3,y:5}];
   direction = nextDirection = "RIGHT";
   score = 0;
-  running = true;
   scoreEl.textContent = score;
   gameOverScreen.classList.remove("show");
   spawnFood();
@@ -263,16 +318,21 @@ function update() {
 
   if(head.x<0||head.y<0||head.x>=GRID||head.y>=GRID||
      snake.some(s=>s.x===head.x&&s.y===head.y)) {
-    endGame(); return;
+    clearInterval(loop);
+    finalScoreEl.textContent = score;
+    gameOverScreen.classList.add("show");
+    return;
   }
 
   snake.unshift(head);
 
-  if(head.x===food.x&&head.y===food.y){
+  if(head.x===food.x && head.y===food.y) {
     score+=10;
-    scoreEl.textContent=score;
+    scoreEl.textContent = score;
     spawnFood();
-  } else snake.pop();
+  } else {
+    snake.pop();
+  }
 
   draw();
 }
@@ -288,21 +348,15 @@ function draw() {
   });
 }
 
-function endGame() {
-  running=false;
-  clearInterval(loop);
-  finalScoreEl.textContent=score;
-  gameOverScreen.classList.add("show");
+function restartGame() {
+  startGame();
 }
 
-function restartGame(){ startGame(); }
-
 document.addEventListener("keydown", e=>{
-  if(!running) return;
-  if((e.key==="ArrowUp"||e.key==="w")&&direction!=="DOWN") nextDirection="UP";
-  if((e.key==="ArrowDown"||e.key==="s")&&direction!=="UP") nextDirection="DOWN";
-  if((e.key==="ArrowLeft"||e.key==="a")&&direction!=="RIGHT") nextDirection="LEFT";
-  if((e.key==="ArrowRight"||e.key==="d")&&direction!=="LEFT") nextDirection="RIGHT";
+  if(e.key==="ArrowUp"||e.key==="w") direction!=="DOWN"&&(nextDirection="UP");
+  if(e.key==="ArrowDown"||e.key==="s") direction!=="UP"&&(nextDirection="DOWN");
+  if(e.key==="ArrowLeft"||e.key==="a") direction!=="RIGHT"&&(nextDirection="LEFT");
+  if(e.key==="ArrowRight"||e.key==="d") direction!=="LEFT"&&(nextDirection="RIGHT");
 });
 
 btnUp.onclick=()=>direction!=="DOWN"&&(nextDirection="UP");
